# dbwriter_rust

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2024-08-05-125533_base/: up.sql
src/: main.rs  schema.rs
src/api/: mod.rs  models.rs  routes.rs
src/db/: dao.rs  mod.rs  schema.rs
