[package]
name = "dbwriter_rust"
version = "0.1.0"
edition = "2018"

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.22", features = ["serde"] }
actix-web = "4.1.0"
env_logger = "0.9"

[dev-dependencies]
actix-rt = "2.7.0"

# Needed to get debug symbols in the flamegraph
[profile.release]
debug = 1

# Linker arguments to get flamegraphs and perf to work properlu
[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
