[package]
name = "dbwriter_rust"
version = "0.2.2"
edition = "2021"

[dependencies]
diesel = { version = "^2.2.2", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "^2.2.0"
dotenv = "^0.15.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
actix-web = "^4.8.0"
env_logger = "^0.11"

#[dev-dependencies]
#actix = "^0.13.0"

# Needed to get debug symbols in the flamegraph
[profile.release]
debug = 1

# Linker arguments to get flamegraphs and perf to work properly
[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[target.aarch64-apple-darwin]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
